Version 1.0-3
--------------



Version 1.0-2
--------------

* no major different, just to get through CRAN policies

Version 1.0-1
--------------


* New version of gWidgets2RGtk2